[package]
name = "powermax-b5120"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"
crc = "2.1.0"
reqwest = { version = "0.11.4", default-features = false, features = [
    "rustls-tls",
] }
